syntax = "proto3";

package worker;

service WorkerService {
  rpc ValidateWorkerCredentials (WorkerLoginRequest) returns (WorkerLoginResponse);
}

message WorkerLoginRequest {
  string email = 1;
  string password = 2;
}

message WorkerLoginResponse {
  bool success = 1;
  string message = 2;
  WorkerData worker = 3;
}

message WorkerData {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string location = 5;
  string workType = 6;
  repeated string preferredWorks = 7;
  bool isApproved = 8;
}